fixed layout and added hamburger menu on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -17,6 +17,8 @@ nav {
     .hero-bg {
         height: 70vh;
         padding: 0;
+        display: flex;
+        align-items: center;
     }
 }
 
